<resources>
    <string name="app_name">ConnectUs</string>

    <string name="title_dialog_friend_remove">Quer desfazer essa conexão?</string>
    <string name="content_dialog_friend_remove">Quer desfazer essa conexão</string>
    <string name="voce">Você</string>
    <string name="enviar_request_membro">Enviar Request do Encontro</string>
    <string name="campos_vazios">Não pode haver campos vazios!</string>
    <string name="campos_data">Por Favor Selecione uma data!</string>

    <string name="menu_home">Home</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_encontro">Encontros</string>
    <string name="menu_mensagem">Mensagens</string>
    <string name="menu_friends">Amigos</string>
    <string name="menu_request">Requests</string>
    <string name="menu_sair">Sair</string>
</resources>
