<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home"/>

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_perfil"
            android:title="@string/menu_perfil" />

        <item
            android:id="@+id/nav_mensagem"
            android:icon="@drawable/ic_menu_mensagem"
            android:title="@string/menu_mensagem" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_social"
            android:title="@string/menu_friends"/>

        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_baseline_person_add_24"
            android:title="@string/menu_request"/>

        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_sair" />
    </group>
</menu>