<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">



    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.telas_background.fragment.Perfil"
        android:label="@string/menu_perfil"
        tools:layout="@layout/activity_perfil" />

    <fragment
    android:id="@+id/nav_home"
    android:name="com.example.telas_background.fragment.Home"
    android:label="@string/menu_home"
    tools:layout="@layout/activity_home" />

    <fragment
        android:id="@+id/nav_mensagem"
        android:name="com.example.telas_background.fragment.Contact"
        android:label="@string/menu_mensagem"
        tools:layout="@layout/activity_contact"/>

    <fragment
    android:id="@+id/nav_friends"
    android:name="com.example.telas_background.fragment.Friends"
    android:label="@string/menu_friends"
    tools:layout="@layout/activity_friends"/>

    <fragment
        android:id="@+id/nav_request"
        android:name="com.example.telas_background.fragment.Request"
        android:label="@string/menu_request"
        tools:layout="@layout/activity_request"/>

    <fragment
        android:id="@+id/nav_encontro"
        android:name="com.example.telas_background.fragment.Meeting"
        android:label="@string/menu_encontro"
        tools:layout="@layout/activity_meeting"/>


</navigation>